force-app/main/default/objects/AuthentisignConfig__c/AuthentisignConfig__c.object-meta.xml
<CustomObject>
    <description>Configuration for Authentisign documents</description>
    <label>Authentisign Config</label>
    <nameField>
        <label>Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Authentisign Configs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>