force-app/main/default/objects/AuthentisignConfig__c/fields/DocumentId__c.field-meta.xml
<CustomField>
    <fullName>DocumentId__c</fullName>
    <externalId>true</externalId>
    <label>Document ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>