force-app/main/default/objects/AuthentisignConfig__c/fields/ExternalDocumentId__c.field-meta.xml
<CustomField>
    <fullName>ExternalDocumentId__c</fullName>
    <label>External Document ID</label>
    <type>Text</type>
    <length>255</length>
    <externalId>true</externalId>
</CustomField>