force-app/main/default/objects/AuthentisignConfig__c/fields/FieldMappings__c.field-meta.xml
<CustomField>
    <fullName>FieldMappings__c</fullName>
    <label>Field Mappings</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>