force-app/main/default/objects/AuthentisignConfig__c/fields/PlacedFields__c.field-meta.xml
<CustomField>
    <fullName>PlacedFields__c</fullName>
    <label>Placed Fields</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>