force-app/main/default/objects/AuthentisignConfig__c/fields/RecipientIds__c.field-meta.xml
<CustomField>
    <fullName>RecipientIds__c</fullName>
    <label>Recipient IDs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>