force-app/main/default/objects/AuthentisignConfig__c/fields/RecipientsJson__c.field-meta.xml
<CustomField>
    <fullName>RecipientsJson__c</fullName>
    <label>Recipients JSON</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Stores JSON data for selected recipients in the Authentisign workflow.</description>
</CustomField>